fixed image sources

--- a/src/app/dev-tools-table/dev-tools-table.component.html
+++ b/src/app/dev-tools-table/dev-tools-table.component.html
@@ -19,7 +19,9 @@
     <!-- Symbol Image -->
     <ng-container matColumnDef="image">
       <th mat-header-cell *matHeaderCellDef> Image </th>
-      <td mat-cell *matCellDef="let element"> {{element.image}} </td>
+      <td mat-cell *matCellDef="let element">
+        <img [src]="element.image" />
+      </td>
     </ng-container>
 
 
