--- a/src/app/dev-tools-table/dev-tools-table.component.scss
+++ b/src/app/dev-tools-table/dev-tools-table.component.scss
@@ -7,6 +7,74 @@ table {
   width: 100%;
 }
 
-.spacer{
+.spacer {
   flex: 1;
+}
+
+.preview-wrapper {
+  display: flex;
+
+  .preview-text {
+    margin-left: 1rem;
+  }
+}
+
+.preview-image {
+  position: relative;
+  width: 120px;
+  height: 120px;
+  overflow: hidden;
+
+  img {
+    position: relative;
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center center;
+  }
+}
+
+.toolbar-input {
+  input {
+    border: none;
+    padding: .5rem;
+    border-radius: .25rem;
+    box-shadow: 0 0 3px rgba(0, 0, 0, .5) inset;
+  }
+}
+
+
+.table-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+
+  .table-header {
+    position: relative;
+  }
+
+  .table-content {
+    position: relative;
+    flex: 1;
+    overflow-x: hidden;
+    overflow-y: scroll;
+
+    table {
+      border-spacing: 1rem;
+
+      td {
+        padding-bottom: 1em;
+      }
+    }
+  }
+
+  .table-footer {
+    position: relative;
+    font-size: 1rem;
+    height: 32px;
+  }
 }
