--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,47 @@
 /* You can add global styles to this file, and also import other style files */
 
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as material;
+@use "sass:map";
+
+@include material.core();
+
+$custom-primary: material.define-palette(material.$gray-palette);
+$custom-accent: material.define-palette(material.$gray-palette, A200, A100, A400);
+$custom-warn: material.define-palette(material.$gray-palette);
+// extra Colors
+$custom-success: material.define-palette(material.$gray-palette);
+$custom-danger: material.define-palette(material.$gray-palette);
+
+a{
+  color:  material.get-color-from-palette($custom-primary, 500-contrast);
+}
+
+
+
+$custom-theme: material.define-light-theme((
+  color: (
+    primary: $custom-primary,
+    accent: $custom-accent,
+    warn: $custom-warn,
+  )
+));
+
+
+$custom-theme: map.deep-merge(
+    $custom-theme,(
+    success: $custom-success,
+    danger: $custom-danger,
+    color:(
+      success: $custom-success,
+      danger: $custom-danger
+    )
+  )
+);
+
+@include material.all-component-themes($custom-theme);
+
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
